--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
 
             <p class="section-text">
-              Hi, I’m Able P Abraham 3rd year CSE BTech student from College Of Engineering Aranmula who dream making the world better place by
+              Hi, I’m Able P Abraham 4th year CSE BTech student from College Of Engineering Aranmula who dream making the world better place by
               creating captivating products.
             </p>
 
